fixing input gaps

--- a/src/style.css
+++ b/src/style.css
@@ -183,7 +183,7 @@ option {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  gap: 15px;
+  gap: 40px;
 }
 
 .buttonsContainer {
@@ -388,7 +388,7 @@ button:active {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 25px;
+    gap: 40px;
   }
 
   .inputControl label {
